--- a/PagWeb.html
+++ b/PagWeb.html
@@ -7,15 +7,32 @@
 
   <!-- Bootstrap 5.3 (CSS + Icons opcionales) -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<!-- CSS actualizado -->
   <style>
-    /* Ajustes menores */
+    /* Ajustes de estilos generales */
     .brand { font-weight: 700; }
     .card img { height: 160px; object-fit: cover; }
     .cursor-pointer { cursor: pointer; }
     .modal-nav .nav-link { border-radius: .5rem; }
     .cart-item-qty { min-width: 2.2rem; text-align: center; }
     .footer-mini { font-size: .95rem; }
+
+    /* Navbar con rojo suave */
+    .navbar-custom {
+      background-color: #e74c3c !important; /* Rojo suave */
+    }
+
+    /* Carousel reducido a la mitad */
+    #hero {
+      height: 50vh;
+    }
+
+    #hero .carousel-item img {
+      height: 50vh;
+      object-fit: cover;
+    }
   </style>
+
 </head>
 <body class="bg-light">
 
