--- a/PagWeb.html
+++ b/PagWeb.html
@@ -17,12 +17,12 @@
     .cart-item-qty { min-width: 2.2rem; text-align: center; }
     .footer-mini { font-size: .95rem; }
 
-    /* Navbar con rojo suave */
+    /* Navbar en rojo */
     .navbar-custom {
       background-color: #e74c3c !important; /* Rojo suave */
     }
 
-    /* Carousel reducido a la mitad */
+    
     #hero {
       height: 50vh;
     }
