--- a/PagWeb.html
+++ b/PagWeb.html
@@ -315,7 +315,7 @@
                 <p>Estamos en Av. Antonio Varas 801, Providencia.</p>
                 <div class="ratio ratio-16x9 rounded overflow-hidden">
                   <iframe
-                    src="https://www.google.com/maps/place/Antonio+Varas+801,+7500971+Providencia,+Regi%C3%B3n+Metropolitana/data=!4m2!3m1!1s0x9662cf7bfe1c2725:0xa7c47c64f6f4007b?sa=X&ved=1t:242&ictx=111"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3329.557295977238!2d-70.6154281!3d-33.43478439999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662cf7bfe1c2725%3A0xa7c47c64f6f4007b!2sAntonio%20Varas%20801%2C%207500971%20Providencia%2C%20Regi%C3%B3n%20Metropolitana!5e0!3m2!1ses-419!2scl!4v1765431794275!5m2!1ses-419!2scl"
                     title="Mapa" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
               </div>
